kubernetesfiles/springbootreader/springbootreader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: githubview-springbootreader-service
spec:
  selector:
    app: githubview-springbootreaderapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
